Project CollegeSystem {
  database_type: "PostgreSQL"
}

Enum Gender {
  MALE
  FEMALE
  OTHER
}

Enum Modality {
  FACE_TO_FACE
  REMOTE
}

Enum EnrollmentStatus {
  ACTIVE
  DROPPED
  FINISHED
}

Enum AssignmentType {
  TEST
  HOMEWORK
  PROJECT
  WORKSHOP
}

Table colleges {
  id bigint [pk]
  name varchar(100)
  description text
}

Table faculties {
  id bigint [pk]
  name varchar(100)
  description text
  dean varchar(100)
  college_id bigint [ref: > colleges.id] // College "1" -> "1..*" Faculty
}

Table careers {
  id bigint [pk]
  name varchar(100)
  description text
  faculty_id bigint [ref: > faculties.id] // Faculty "1" -> "1..*" Career
}

Table subjects {
  id bigint [pk]
  name varchar(100)
  code varchar(20) [unique]
  credits int
  description text
  career_id bigint [ref: > careers.id] // Career "1" -> "1..*" Subject
}

Table professors {
  id bigint [pk]
  name varchar(100)
  last_name varchar(100)
  institutional_email varchar(100) [unique]
  birthday date
  gender Gender
}

Table classrooms {
  id bigint [pk]
  room_number varchar(10)
  capacity int
  location varchar(100)
}

Table courses {
  id bigint [pk]
  name varchar(100)
  capacity int
  modality Modality
  schedule timestamp
  subject_id bigint [ref: > subjects.id] // Subject "1" -> "1..*" Course
  classroom_id bigint [ref: > classrooms.id] // Course "1" -> "1..*" Classroom
  professor_id bigint [ref: > professors.id] // Course "1" -> "1" Professor
}

Table enrollments {
  id bigint [pk]
  sign_up_date date
  status EnrollmentStatus
}

Table students {
  id bigint [pk]
  name varchar(100)
  last_name varchar(100)
  institutional_email varchar(100) [unique]
  birthday date
  gender Gender
  enrollment_id bigint [ref: > enrollments.id, unique] // Student "1" -> "1" Enrollment (1:1 enforced)
}

Table assignments {
  id bigint [pk]
  type AssignmentType
  description text
  weight int
  subject_id bigint [ref: > subjects.id] // Subject "1" -> "1..*" Assignment
}

Table enrollment_subjects {
  enrollment_id bigint [ref: > enrollments.id]
  subject_id bigint [ref: > subjects.id]
  Primary Key (enrollment_id, subject_id)
}

Table grades {
  id bigint [pk]
  value double
  assignment_id bigint [ref: > assignments.id] // Assignment "1" -> "1" Grade
  subject_id bigint [ref: > subjects.id] // Subject "1" -> "1" Grade
  student_id bigint [ref: > students.id]
}

Table course_students {
  course_id bigint [ref: > courses.id]
  student_id bigint [ref: > students.id]
  Primary Key (course_id, student_id) // Course "1" -> "1..*" Student (M:N)
}
